--- a/INSTALL
+++ b/INSTALL
@@ -8,6 +8,7 @@ MINIMUM REQUIREMENTS:
 	alsa-0.9.0
 	jack-0.99.0
 	libsamplerate-0.1.2
+	lash-0.5.4
 -------------------------------------------------------------------------------
 
 
