--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-PHASEX-0.12.0:
+PHASEX dev-m1:
 
 -------------------------------------------------------------------------------
 [P]hase [H]armonic [A]dvanced [S]ynthesis [EX]periment
@@ -146,7 +146,7 @@ COMPILING AND INSTALLING PHASEX:
 
 For most installations, all that should be needed is the following:
 
-	cd phasex-0.12.0
+	cd phasex-dev-m1
 	./configure --enable-arch=native
 	make
 	make install
@@ -238,7 +238,7 @@ OBTAINING PHASEX:
 
 Current version:
 
-Visit PHASEX development branch at http://github.com/disabled/phasex-dev
+Visit PHASEX development branch at http://disabled.github.com/phasex-dev
 or simply grab git tree with:
 
     git clone git://github.com/disabled/phasex-dev.git
